hold to delete button

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@
     --primary: #f46132;
     --primaryLighter: #f9774d;
     --primaryDarker: #de4817;
+    --danger: #f43232;
+    --dangerLighter: #fc6666;
+    --dangerDarker: #ca1919;
     --secondary: #1184e7;
     --secondaryLighter: #5fa9e9;
     --secondaryDarker: #0a6dc2;
