fancy italic added

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 *,
 :after,
@@ -86,4 +86,11 @@ body {
 
 [basics-text] {
     margin: 0px;
+}
+
+i[data-fancy-italic] {
+    font-family: Newsreader;
+    font-weight: 500;
+    font-style: italic;
+    color: var(--primaryDarker);
 }
